CSS: About Section

--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
           Affordable Pricing  <span>|</span>  Responsive Website  <span>|</span>  Unlimited Revisions
         </h4>
         <p class="about__section-text">
-          The 7paths UI Teams designs mobile responsive and interactive WordPress and Shopify themes that are affordable and available immedia. Browse through our library of themes to select a design that suits your branding needs or reach out to the team to discuss creating a one of a kind design for  your business.  We can have your Custom Website design ready in 3-7 days!
-When it comes to creating your project, we want to turn your vision into a reality.
+          The 7paths UI Teams designs mobile responsive and interactive WordPress and Shopify themes that are affordable and available immedia. Browse through our library of themes to select a design that suits your branding needs or reach out to the team to discuss creating a one of a kind design for  your business.  We can have your Custom Website design ready in 3-7 days! <br>When it comes to creating your project, we want to turn your vision into a reality.
         </p>
 
-        <a href="#" class="btn cta__btn">
+        <a href="#" class="btn about__section-cta-btn">
           request a free consult
         </a>
       </div>
