--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
   <main>
     <section class="about__section section">
       <div class="container about__section-container">
-        <h3 class="section-title">Who We Are</h3>
+        <h3 class="section__title">Who We Are</h3>
         <h4 class="about__section-subtitle">
           Affordable Pricing  <span>|</span>  Responsive Website  <span>|</span>  Unlimited Revisions
         </h4>
         <p class="about__section-text">
-          The 7paths UI Teams designs mobile responsive and interactive WordPress and Shopify themes that are affordable and available immedia. Browse through our library of themes to select a design that suits your branding needs or reach out to the team to discuss creating a one of a kind design for  your business.  We can have your Custom Website design ready in 3-7 days! <br>When it comes to creating your project, we want to turn your vision into a reality.
+          The 7paths UI Teams designs mobile responsive and interactive WordPress and Shopify themes that are affordable and available immedia. Browse through our library of themes to select a design that suits your branding needs or reach out to the team to discuss creating a one of a kind design for  your business. <br>We can have your Custom Website design ready in 3-7 days! <br>When it comes to creating your project, we want to turn your vision into a reality.
         </p>
 
         <a href="#" class="btn about__section-cta-btn">
@@ -94,8 +94,8 @@
     </section>
 
     <section class="section template__section">
-      <div class="container">
-        <div class="services__card">
+      <div class="container template__container">
+        <div class="services__cards">
           <!-- UI/UX Card - Card 01 -->
           <div class="services__card">
             <h4 class="services__card-title">
@@ -123,7 +123,7 @@
 
       <!-- Templates -->
         <h3 class="section__title">
-          Website Templates For Every Purpose
+          Website Templates For <br> Every Purpose
         </h3>
         <p class="template__section-subtitle">
           Browse our catalog of beautiful WordPress themes and Figma designs
@@ -146,7 +146,6 @@
           <button class="btn template__btn">Creatives</button>
           <button class="btn template__btn">Entertainment</button>
         </div>
-      </div>
 
       <div class="templates__cards">
         <div class="templates__card">
@@ -154,12 +153,12 @@
           <article class="template__info">
             <h5>Theme Name - Template Designation</h5>
             <div class="btns__group">
-              <button class="price__btn">$10</button>
+              <button class="price__btn btn">$10</button>
               <div class="action__btns">
-                <a href="#" class="template__btn btn buy__btn">
+                <a href="#" class="action__btn btn buy__btn">
                   Buy
                 </a>
-                <a href="#" class="template__btn btn preview__btn">
+                <a href="#" class="action__btn btn preview__btn">
                   Preview
                 </a>
               </div>
@@ -173,12 +172,12 @@
           <article class="template__info">
             <h5>Theme Name - Template Designation</h5>
             <div class="btns__group">
-              <button class="price__btn">$10</button>
+              <button class="price__btn btn">$10</button>
               <div class="action__btns">
-                <a href="#" class="template__btn btn buy__btn">
+                <a href="#" class="action__btn btn buy__btn">
                   Buy
                 </a>
-                <a href="#" class="template__btn btn preview__btn">
+                <a href="#" class="action__btn btn preview__btn">
                   Preview
                 </a>
               </div>
@@ -192,12 +191,12 @@
           <article class="template__info">
             <h5>Theme Name - Template Designation</h5>
             <div class="btns__group">
-              <button class="price__btn">$10</button>
+              <button class="price__btn btn">$10</button>
               <div class="action__btns">
-                <a href="#" class="template__btn btn buy__btn">
+                <a href="#" class="action__btn btn buy__btn">
                   Buy
                 </a>
-                <a href="#" class="template__btn btn preview__btn">
+                <a href="#" class="action__btn btn preview__btn">
                   Preview
                 </a>
               </div>
@@ -211,12 +210,12 @@
           <article class="template__info">
             <h5>Theme Name - Template Designation</h5>
             <div class="btns__group">
-              <button class="price__btn">$10</button>
+              <button class="price__btn btn">$10</button>
               <div class="action__btns">
-                <a href="#" class="template__btn btn buy__btn">
+                <a href="#" class="action__btn btn buy__btn">
                   Buy
                 </a>
-                <a href="#" class="template__btn btn preview__btn">
+                <a href="#" class="action__btn btn preview__btn">
                   Preview
                 </a>
               </div>
@@ -230,12 +229,12 @@
           <article class="template__info">
             <h5>Theme Name - Template Designation</h5>
             <div class="btns__group">
-              <button class="price__btn">$10</button>
+              <button class="price__btn btn">$10</button>
               <div class="action__btns">
-                <a href="#" class="template__btn btn buy__btn">
+                <a href="#" class="action__btn btn buy__btn">
                   Buy
                 </a>
-                <a href="#" class="template__btn btn preview__btn">
+                <a href="#" class="action__btn btn preview__btn">
                   Preview
                 </a>
               </div>
@@ -249,12 +248,12 @@
           <article class="template__info">
             <h5>Theme Name - Template Designation</h5>
             <div class="btns__group">
-              <button class="price__btn">$10</button>
+              <button class="price__btn btn">$10</button>
               <div class="action__btns">
-                <a href="#" class="template__btn btn buy__btn">
+                <a href="#" class="action__btn btn buy__btn">
                   Buy
                 </a>
-                <a href="#" class="template__btn btn preview__btn">
+                <a href="#" class="action__btn btn preview__btn">
                   Preview
                 </a>
               </div>
@@ -264,6 +263,7 @@
       </div>
 
       <a href="#" class="view__templates-btn">View All Templates</a>
+    </div>
     </section>
   </main>
 
