--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./assets/css/normalize.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="./assets/css/styles.css">
-  <script defer src="./js/main.js"></script>
+  <script defer src="./assets/js/main.js"></script>
 </head>
 <body>
   <!-- Navigation Menu and Hero -->
@@ -47,7 +47,7 @@
             Sign In
           </a>
   
-          <i class='bx bx-menu' ></i>
+          <i class='bx bx-menu'></i>
         </div>
       </nav>
   
@@ -262,39 +262,37 @@
         </div>
       </div>
 
-      <a href="#" class="view__templates-btn">View All Templates</a>
+      <div class="view__all">
+        <a href="#" class="view__templates-btn">View All Templates</a>
+      </div>
     </div>
     </section>
   </main>
 
   <!-- Footer -->
   <footer>
-    <div class="container">
+    <div class="container footer__container">
       <div class="logo">
         <a href="#" class="logo__link">
           <img src="./assets/images/logo-07 1.png" alt="Logo Image">
         </a>
       </div>
 
-      <div>
+      <div class="terms__privacy">
         <a href="#">Terms & Conditions</a>
         <a href="#">Privacy Policy</a>
       </div>
-      <a href="#">FAQ</a>
+      <a href="#" class="faq">FAQ</a>
 
-      <nav>
+      <nav class="footer__nav">
         <a href="#">About</a>
         <a href="#">Templates</a>
         <a href="#">Contact</a>
       </nav>
+
       <hr />
-
-      <div>
-        <p>
-          &copy; <span class="date"></span> 7Paths LLC. All rights reserved
-        </p>
-
-        <ul class="social__icons">
+        
+      <ul class="social__icons">
           <li>
             <a href="#">
               <i class='bx bxl-facebook' ></i>
@@ -312,11 +310,13 @@
           </li>
           <li>
             <a href="#">
-              <i class='bx bxl-linkedin' ></i>
+              <i class='bx bxl-linkedin-square'></i>
             </a>
           </li>
-        </ul>
-      </div>
+      </ul>
+      <p>
+        &copy; <span class="date"> </span> 7Paths LLC. All rights reserved
+      </p>
     </div>
   </footer>
 </body>
